# PCM16.24KHz-to-U-LAW.8KHz-Stream-Converter

./: .gitignore  LICENSE  README.md
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: cli.ts  index.ts
node/src/examples/: convertSample.ts
node/src/examples/data/: down_sample_8khz.ulaw
python/: PROJECT_SUMMARY.md  README.md  SETUP.md  pyproject.toml
python/benchmarks/: benchmark_converter.py
python/examples/: convert_sample.py  example_gemini_twilio.py  integration_example.py
python/examples/data/: down_sample_8khz.ulaw
python/src/audio_converter/: __init__.py  __main__.py  converter.py
python/tests/: test_converter.py
